--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,40 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  layouts:
+    application:
+      title: "Ruby on Rails Tutorial Sample App"
+      english: "English"
+      vietnamese: "Vietnamese"
+    header:
+      home: "Home"
+      help: "Help"
+      login: "Login"
+    footer:
+      about: "About"
+      contact: "Contact"
+      new: "News"
+      tutorial: "Ruby on Rails Tutorial"
+  static_pages:
+    home:
+      fore_title: "Home"
+      name: "Welcome To Sample App"
+      intro_1: "This is the home page for the"
+      tutorial: "Ruby on Rails Tutorial"
+      intro_2: "Sample application."
+      signup: "Sign Up Now"
+    help:
+      fore_title: "Help"
+      intro_1: "Get help on the Ruby on Rails Tutorial at the"
+      outro_1: "Rails Tutorial Help page"
+      intro_2: "To get help on this sample app, see the"
+      outro_2: "Ruby on Rails Tutorial book"
+    contact:
+      fore_title: "Contact"
+      intro: "Contact the Ruby on Rails Tutorial about the sample app at the"
+      outro: "Contact page"
+    about:
+      fore_title: "About"
+      intro: "About the Ruby on Rails Tutorial about the sample app at the"
+      outro: "About page"
+  users:
+    new:
+      fore_title: "User"
