Chapter9: Advanced Login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,5 +67,6 @@ en:
       submit: "Log in"
       new_user: "New user?"
       sign_up: "Sign up now!"
+      remember: "Remember me on this computer"
     create:
       error: "Invalid email/password combination"
