--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,3 +99,21 @@ en:
       activated: "Account activated!"
       invalid_link: "Invalid activation link"
       require_activated: "Account not activated. Check your email for the activation link."
+    password_reset:
+      subject: "Password reset"
+      intro: "To reset your password click the link below:"
+      expire: "This link will expire in two hours."
+      not_own_request: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+  password_resets:
+    new:
+      title: "Forgot password"
+      submit: "Submit"
+    create:
+      sent_email: "Email sent with password reset instructions"
+      email_address_not_found: "Email address not found"
+    edit:
+      title: "Reset password"
+      update: "Update password"
+    update:
+      empty_password: "can't be empty"
+      password_reset: "Password has been reset."
